# LinkyDinky

./: .gitignore  README.md  connect.py  old_connects.py  open_tabs_from_json.py  pyproject.toml  request_loops.py  request_minimum.py  run_gui.sh  scheduler.py  search_first_names.py  translate.py  unmessaged_connects.py  withdraw_requests.py
.github/workflows/: release.yml
config/: blacklist.json  config.json  currentworkblacklist.json  keywords.json  messages.json  nameblacklist.json  old_names.json  translated_names.json  untranslated_names.json
core/: base.py  downloader.py  friend_request_core.py  friend_request_mixin.py  name_translate_core.py  old_connects_core.py  unmessaged_connects_core.py  user_search_mixin.py  withdraw_core.py
gui/: bot_runner.py  main.py
gui/components/: config_form.py  console_view.py  cookie_manager.py  tag_input.py
