[tool.poetry]
name = "linkedinautomationz"
version = "0.1.0"
description = "LinkedIn Automation using selenium"
authors = ["elam91 <elam91@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
selenium = "4.5.0"
selenium-stealth = "1.0.6"
requests = "^2.28.1"
schedule = "^1.1.0"
"discord.py" = "^2.0.0"
flet = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
